--- a/BinauralBeats/BinauralBeats/BinauralBeats.csproj
+++ b/BinauralBeats/BinauralBeats/BinauralBeats.csproj
@@ -65,6 +65,9 @@
     <EmbeddedResource Include="LogIn.resx">
       <DependentUpon>LogIn.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MoodsForm.resx">
+      <DependentUpon>MoodsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
