--- a/BinauralBeats/BinauralBeats/BinauralBeats.csproj
+++ b/BinauralBeats/BinauralBeats/BinauralBeats.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -83,6 +84,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
@@ -118,6 +120,18 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AlphaWave.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BetaWave.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DeltaWave.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ThetaWave.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
