--- a/BinauralBeats/BinauralBeats/packages.config
+++ b/BinauralBeats/BinauralBeats/packages.config
@@ -1,13 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Bass.Net" version="1.0.0" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
   <package id="ManagedBass" version="2.0.4" targetFramework="net472" />
   <package id="ManagedBass.Mix" version="2.1.0" targetFramework="net472" />
   <package id="ManagedBass.PInvoke" version="0.6.1" targetFramework="net472" />
   <package id="MathNet.Numerics" version="4.9.0" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.18" targetFramework="net472" />
   <package id="NAudio" version="1.9.0" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
-  <package id="protobuf-net" version="2.3.2" targetFramework="net472" />
+  <package id="protobuf-net" version="2.4.4" targetFramework="net472" />
   <package id="SoundFingerprinting" version="7.0.0" targetFramework="net472" />
   <package id="SoundFingerprinting.Audio.Bass" version="7.0.0" targetFramework="net472" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
 </packages>
