--- a/BinauralBeats/BinauralBeats/BinauralBeats.csproj
+++ b/BinauralBeats/BinauralBeats/BinauralBeats.csproj
@@ -104,6 +104,13 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdvertisementPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdvertisementPopup.Designer.cs">
+      <DependentUpon>AdvertisementPopup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Advertisements.cs" />
     <Compile Include="App.cs" />
     <Compile Include="FeedbackAndRating.cs" />
     <Compile Include="FeedbackAndRatingForm.cs">
@@ -148,6 +155,9 @@
     <Compile Include="Spectrum.xaml.cs">
       <DependentUpon>Spectrum.xaml</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdvertisementPopup.resx">
+      <DependentUpon>AdvertisementPopup.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FeedbackAndRatingForm.resx">
       <DependentUpon>FeedbackAndRatingForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,7 +167,10 @@
     <EmbeddedResource Include="MoodsForm.resx">
       <DependentUpon>MoodsForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx" />
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
     </EmbeddedResource>
@@ -216,6 +229,7 @@
     <None Include="Resources\DeltaWave.wav" />
     <None Include="Resources\ThetaWave.wav" />
     <None Include="Resources\AlphaWave .wav" />
+    <None Include="Resources\TurnPremiumOn.gif" />
     <Content Include="x64\bass.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
